# spark_transformations

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  important_links  pyproject.toml  requirements-dev.txt
.github/workflows/: cdc_automated_workflow.yml
backup/: .gitignore
backup/command_palette/: autoloader_read.py  autoloader_write.py  schema.py
backup/setup/: Dockerfile  docker-compose.yml
backup/setup/app/: spark_transformation_setup.ipynb
data/: employees_1.csv  employees_2.csv  employees_3.csv  employees_4.csv  employees_5.csv  employees_6.csv  employees_7.csv
docs/: raw-table-change-scenarios.md
resources/: pipeline.yml  pipeline_propagate.yml
setup/: requirements.txt
setup/app/: spark_transformation_setup.ipynb  spark_uc.py
src/: sample.sql
src/metric_views/: employee_metrics.sql
src/spark_transformations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transformations/: pipeline_config.py  propagate_read_and_write_to_silver_curated_alternate_dq.py  propagate_read_and_write_to_silver_curated_dlt_dq.py  propagate_read_and_write_to_silver_schema_enforced.py  propagate_write_to_gold_table.py  propagate_write_to_gold_table_cdc.py  read_and_write_to_curated.py  read_and_write_to_curated_alternate_quality.py  read_and_write_to_raw.py  read_and_write_to_silver.py  read_and_write_to_silver_curated_alternate_dq.py  read_and_write_to_silver_curated_dlt_dq.py  read_and_write_to_silver_schema_enforced.py  schemas.py  schemas_silver.py  write_to_gold_table.py  write_to_gold_table_cdc.py
tests/: conftest.py  test_pipeline_config.py  test_primary_transformations.py  test_propagate_transformations.py  test_schemas.py
