[project]
name = "spark-transformations"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyspark>=3.5.0,<3.6",
]

[tool.pytest.ini_options]
pythonpath = ["src/transformations"]
testpaths = ["tests"]
addopts = "--cov=src/transformations --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/transformations"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
