[project]
name = "spark-transformations"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyspark>=3.5.0,<3.6",
    "ruff>=0.11.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src/transformations", "tests"]
exclude = [
    ".venv",
    ".pytest_cache",
    "backup",
    "src/spark_transformations.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline_config", "schemas", "schemas_silver", "spark_uc"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"src/transformations/read_and_write_to_raw.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src/transformations"]
testpaths = ["tests"]
addopts = "--cov=src/transformations --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/transformations"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
